user_service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  annotations:
    konghq.com/strip-path: "true"  # Supprime `/api/users/` avant d'envoyer à Django
    konghq.com/plugins: jwt-auth  # Applique un plugin JWT (si activé)
spec:
  ingressClassName: kong  # Spécifie que Kong est utilisé comme Ingress Controller
  rules:
  - host: myapi.local  # Nom de domaine utilisé pour l'accès
    http:
      paths:
      - path: /api/users/  # Endpoint exposé
        pathType: Prefix
        backend:
          service:
            name: user-service  # Nom du service Kubernetes
            port:
              number: 8000  # Port du service exposé dans Kubernetes
